Fri Aug 24 08:44:46 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Even better, you can copy a pixmap between displays :) This is
	much faster than Xput/get. Cheers raster.

Thu Aug 23 19:04:57 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Okay. So you can't copy a pixmap between two displays using
	XCopyArea :) Fair enough, back to blechy XPut/XGetImage. It works
	now with or without E, and Eterm is happy. Managed to avoid
	leaking data into X through imlib2 or my own cached GCs, which is
	nice :)
	* Tested commandline too, works great with E or without. Finally.
	* Also fixed a bug with the non-E centering code, it would only
	have really worked for square images before ;-)

Wed Aug 22 22:44:13 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Okay, setting the pixmap and atoms works now, bar an imlib2 bug
	we need to fix. So right now, rather than dump core, I leak X
	connections whenever you set a BG. No big hit unless you do
	thousands, and it's only temporary until we fix imlib2.
	* This is mainly for raster to check out right now.

Wed Aug 22 17:01:08 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Okay, setting bg from cmdline when not running E was broken,
	basically because we didn't XFlush before exiting. My bad.
    * Ugh. I'm trying to emulate Esetroot, by setting the atoms needed to
    tell Eterm where the bg pixmap is. Of course, when feh exits, the
    pixmap is cleaned up by X, unless I do an XSetCloseDownMode(disp,
    RetainPermanent); However, this means all my crap hangs around, I want
    it to be cleaned up. So anyone know how I can make the pixmap stick
    around in X, without leaving windows and other pixmaps there too?
    (Esetroot lets it all hang out basically, but it's non graphical and
    can afford to. It always exits after doing it's job and the next time
    you run it, it frees the last pixmap it made).

Mon Aug 20 20:58:47 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>
