@@ -61,8 +61,6 @@ init_multiwindow_mode(void)
 
       if ((w = winwidget_create_from_file(l, s, WIN_TYPE_SINGLE)) != NULL)
       {
-         if (opt.draw_filename)
-            feh_draw_filename(w);
          winwidget_show(w);
          if (opt.reload > 0)
             feh_add_unique_timer(cb_reload_timer, w, opt.reload);
